Backport to 1.16